feat: fix button and icons

--- a/src/content/posts/2020-06-29_ruby_miner.mdx
+++ b/src/content/posts/2020-06-29_ruby_miner.mdx
@@ -34,7 +34,7 @@ Next year I am going to choose Python as this is an easier language that I also 
   <Button href="https://github.com/nlxdodge/Advent-Of-Code" icon="mdi:github">
     Advent of Code Repository
   </Button>
-  <Button href="https://www.ruby-lang.org/en/" icon="fontisto:ruby">
+  <Button href="https://www.ruby-lang.org/en/" icon="mdi:language-ruby">
     Ruby Documentation
   </Button>
 </FlexCenter>
