--- a/src/content/posts/2022-09-07_docker_alternatives.mdx
+++ b/src/content/posts/2022-09-07_docker_alternatives.mdx
@@ -50,7 +50,7 @@ winget install RedHat.Podman-Desktop
 Or check out their website and download it manually:
 
 <FlexCenter>
-  <Button href="https://podman-desktop.io/" icon="ph:link-bold">
+  <Button href="https://podman-desktop.io/" icon="mdi:link-variant">
     Podman Desktop Website
   </Button>
 </FlexCenter>
