--- a/src/content/posts/2023-01-06_gone_with_the_old_in_with_the_new.mdx
+++ b/src/content/posts/2023-01-06_gone_with_the_old_in_with_the_new.mdx
@@ -53,7 +53,7 @@ But with that said, I am very happy with how it turned out, and I will be mainta
   <Button href="https://github.com/nlxdodge/portfolio-astro" icon="mdi:github">
     Astro Portfolio Repository
   </Button>
-  <Button href="https://atsro.build/" icon="ph:link-bold">
+  <Button href="https://atsro.build/" icon="mdi:link-variant">
     Build with Astro
   </Button>
 </FlexCenter>
