--- a/src/content/posts/2023-08-29_the_state_of_winget.mdx
+++ b/src/content/posts/2023-08-29_the_state_of_winget.mdx
@@ -67,10 +67,10 @@ I did buy a Steam Deck and I have been using it for a while now, seeing how well
 But for most MMO's and big FPS games like Apex or Call of Duty, that still have Anti-Cheat I would rather not have a chance to get banned.
 
 <FlexCenter>
-  <Button href="https://atsro.build/" icon="ph:link-bold">
+  <Button href="https://atsro.build/" icon="mdi:link-variant">
     Winget.run
   </Button>
-  <Button href="https://github.com/marticliment/WingetUI" icon="ph:link-bold">
+  <Button href="https://github.com/marticliment/WingetUI" icon="mdi:link-variant">
     Winget UI
   </Button>
   <Button
