--- a/src/content/works/korfbal_trainer.mdx
+++ b/src/content/works/korfbal_trainer.mdx
@@ -54,7 +54,7 @@ I am, as of writing, still not done with the project. The generator needs some m
   <Button href="https://github.com/nlxdodge/korfbal-trainer" icon="mdi:github">
     Korfbal Trainer Repository
   </Button>
-  <Button href="https://korfbal-trainer.netlify.app/" icon="ph:link-bold">
+  <Button href="https://korfbal-trainer.netlify.app/" icon="mdi:link-variant">
     Korfbal Trainer App
   </Button>
 </FlexCenter>
