--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -32,17 +32,18 @@ The best thing is to check my to see where I have worked before with more detail
 
 <FlexCenter>
   <Button href="https://www.linkedin.com/in/gerbenveenhof/">
-    My LinkedIn page
+    My LinkedIn
   </Button>
 </FlexCenter>
-### Some things
+### My experience
 
 - <LabelCollection
-    name="Backend: "
+    name="Backend:"
     labels={[
       "Java 🔥",
       "Rust",
       "Kotlin",
+      "JavaScript/TypeScript",
       "Ruby",
       "Python",
       "PHP",
@@ -50,17 +51,24 @@ The best thing is to check my to see where I have worked before with more detail
     ]}
   />
 - <LabelCollection
-    name="Databases: "
+    name="Databases:"
     labels={["Cassandra 🔥", "PostgreSQL", "MySQL"]}
   />
-- <LabelCollection name="Cloud: " labels={["OpenShift 🔥", "Azure", "AWS"]} />{" "}
+- <LabelCollection name="Cloud:" labels={["OpenShift 🔥", "Azure", "AWS"]} />
 - <LabelCollection
-    name="Frontend: "
-    labels={["Astro 🔥", "Vue", "NPM", "Angular"]}
+    name="Frontend:"
+    labels={["Astro 🔥", "Vue", "PNPM/NPM/Yarn", "Angular"]}
   />
 - <LabelCollection
-    name="Tooling: "
-    labels={["Docker", "Podman", "Intellij", "VSCode", "DBeaver"]}
+    name="Tooling:"
+    labels={[
+      "Docker/Docker-Compose/Podman",
+      "Intellij",
+      "VSCode",
+      "DBeaver",
+      "WSL/Ubuntu",
+      "Traefik"
+    ]}
   />
 
 (From recently used to last used, where a 🔥 indicates the most experience overal)
