ci: pnpm run install and pnpm run format

--- a/src/content/posts/2023-08-29_the_state_of_winget.mdx
+++ b/src/content/posts/2023-08-29_the_state_of_winget.mdx
@@ -70,7 +70,10 @@ But for most MMO's and big FPS games like Apex or Call of Duty, that still have 
   <Button href="https://atsro.build/" icon="mdi:link-variant">
     Winget.run
   </Button>
-  <Button href="https://github.com/marticliment/WingetUI" icon="mdi:link-variant">
+  <Button
+    href="https://github.com/marticliment/WingetUI"
+    icon="mdi:link-variant"
+  >
     Winget UI
   </Button>
   <Button
