--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -31,9 +31,7 @@ While I am learning lots of new things every day, here is a short list of things
 The best thing is to check my to see where I have worked before with more details.
 
 <FlexCenter>
-  <Button href="https://www.linkedin.com/in/gerbenveenhof/">
-    My LinkedIn
-  </Button>
+  <Button href="https://www.linkedin.com/in/gerbenveenhof/">My LinkedIn</Button>
 </FlexCenter>
 ### My experience
 
@@ -67,7 +65,7 @@ The best thing is to check my to see where I have worked before with more detail
       "VSCode",
       "DBeaver",
       "WSL/Ubuntu",
-      "Traefik"
+      "Traefik",
     ]}
   />
 
