feat: this year Go ad AOC language

--- a/src/content/posts/2024-12-01_advent_of_code.mdx
+++ b/src/content/posts/2024-12-01_advent_of_code.mdx
@@ -1,11 +1,11 @@
 ---
-title: Advent of Code 2024 (Zig) 🎄
+title: Advent of Code 2024 (Go) 🎄
 author: Gerben Veenhof
 draft: true
-description: Zig is like Java but different
+description: "This time in advent of code: Go, the language from Google"
 tags:
   - AOC
-  - Zig
+  - Go
 date: 2024-12-01
 ---
 
