--- a/src/content/posts/2023-08-29_the_state_of_winget.mdx
+++ b/src/content/posts/2023-08-29_the_state_of_winget.mdx
@@ -1,10 +1,12 @@
 ---
-title: The Wonderful World of Winget 📦
+title: The Wonderful World of Windows package managers 📦
 author: Gerben Veenhof
-description: For everyone using Windows, the time in finally now to use Winget 📦!
+description: For everyone using Windows, the time in finally now to use a package manager 📦!
 tags:
   - Packages
   - Winget
+  - Chocolatey
+  - Scoop
   - Windows
 date: 2023-08-29
 ---
@@ -14,67 +16,93 @@ import FlexCenter from "../../components/FlexCenter.astro";
 import { Image } from "astro:assets";
 
 import WingetDotRun from "../../assets/images/posts/winget-desktop.png";
-import WingetUI from "../../assets/images/posts/winget-ui.png";
+import UniGetUI from "../../assets/images/posts/unigetui.png";
 
 ## Contents
 
+## WinGet
+
 Every time when I do a Windows installation (because my current one is broken or I want to have a clean slate again) I need to install a bunch of programs again.
-Normally this would take a really long time and I sometimes forget what software I have used, because some software I almost never use.
+Normally this would take a really long time and I sometimes forget what software I have used in the past, because some software I almost never use and just forget.
 
-Well Winget comes to the rescue. And yes I know Scoop and Chocolatey are also a thing these days, and lately even more package managers that keep emerging. But it gets better down below 😉
+We already have some packagemanagers that are getting more mature, think of WinGet from MicroSoft, Chocolatey or even Scoop.
+I stared of by using WinGet as this was made by MicroSoft. I also started using it on Windows 10 before it was installed by default for other people. 
+With Windows 11 you get WinGet straight out of the box.
 
-## Winget.run
+WinGet works mostly great, sometimes the sources get corrupted but overal I had a great experience. Also adding some software to the WinGet repository on GitHub was very easy and I contributed to some automated actions for software that I regularly use.
+
+### WinGet.run
 
 <Image src={WingetDotRun} alt="The website winget.run" format="avif" />
 
-You might have already seen this page before if you are a winget user (hopefully). But if not, let me introduce you to [Winget.run](https://winget.run).
-This website is basically a UI search for Winget. But that is not all there are a plethora of tools available to use for Winget.
-Not everyone is a CLI only fan, including me, that's why I like Winget.run. But after learning about Chocolatey at work (that's the only tool we can use there). I started to wonder, what else is available for Windows?
+Avid WinGet users might have already seen this page before (hopefully). But if not, let me introduce you to [WinGet.run](https://winget.run).
+This website is basically a website(GUI) to search packages on WinGet. But that is not all, there are a plethora of tools available to use for WinGet.
+Not everyone is a fan of CLI tools, in the beginning I also wasn't really a fan. That's why I like WinGet.run and the simplicity of it.
 
-**Is there not something else that can combine everything?**
+## Chocolatey
 
-## Winget UI
+Chocoletey I got exposed to during work, it works kind of the same as Winget, but has more packages and more features.
+Notably WinGet cannot install zipped executables or latests versions. They always need a static version to be available somewhere. 
+Chocolatey has an answer for this, as we have custom installation scripts. Which need to be made, but make it better for more software to be included.
+WinGet is working on solutions for this, but we are not there yet unfortunatly.
 
-One of those tools is [Winget UI](https://github.com/marticliment/WingetUI). Not only does it function as a Winget package manager UI, but also as a UI for Chocolatey and Scoop. So you can search new software, update and manage all in the same tool. Yes you read it correctly, all three tools combined, and even more. They also have integrations for PIP, NPM packages, Powershell and .NET Tool.
+## Scoop
+
+Scoop is the last one that is a bit different, you first need to get buckets where you want to scoop from.
+You can compare it to the Ubuntu family `apt` package manager adding another source to download from.
+
+I did install ZED the new VSCode compeditor with Scoop because it has nightly versions available for Windows. But this got me thinking.
+
+> "Is there not something else that can combine everything in a nice GUI for Windows/Crossplatform, for free?"
+
+## It already exists?
+
+I have used a couple of tools in the past the first one being ChocolateyGUI. This worked alright, but what if a package was not in the Chocolatey repository? 
+Then you are out of luck.
+
+I then started to search for other tools and have used WingetUI before. But after getting support for other packagemanagers, it has been renamed.
+That tool of cours is [UniGetUI](https://github.com/marticliment/UniGetUI). Not only does it function as a WinGet package manager GUI, 
+but it's also as a GUI for Chocolatey, Scoop, PIP, NPM, PowerShell, .NET packages and more to come. 
+So you can search new software, update and manage all your software in the same GUI interface. 
 
 Here is a picture of the tool in action. On the Source column you can see where the package is actually being downloaded from, together with the version and the package ID.
 
-<Image src={WingetUI} alt="The Winget UI Sofware Search" format="avif" />
+<Image src={UniGetUI} alt="The Winget UI Sofware Search" format="avif" />
 
-If you want to use Winget UI yourself then you're in luck!
-Installing the Winget UI tool is really simple with Winget itself, by just using:
+If you want to use UniGetUI yourself then you're in luck!
+Installing the UniGetUI tool is really simple with WinGet itself, by just using:
 
 ```bash
-winget install -e --id SomePythonThings.WingetUIStore
+# WinGet
+winget install --exact --id SomePythonThings.WingetUIStore --source winget
 ```
 
-And you can already start using it right away. And even comes with dark mode 🌚
+Just note that it might install the older version, it's currently in beta for the new name and UI, but that's already stable enough.
 
-## Why write this article about some software management tool?
+## Why a GUI anyways, aren't you a developer?
 
-For automation of course.
-I created a small Gist on my personal Github account to automatically install things like:
+Normally I would automate things like this. For automation of course. For that I created a small Gist on my personal GitHub account to automatically install things like:
 
 - 🎮 Game Launchers.
-- 👨🏻‍💻 Development tools, like IDE's and UI's for containers.
+- 👨🏻‍💻 Development tools, like IDE's and UI's for container development.
 - 🎥 Media tools, like VLC, Handbreak etc.
-- 🏴‍☠️ And others tools that shall not be named here.
+- 🏴‍☠️ And others tools that shall not be named.
 
 ## What about Linux? They stole our idea!
 
-You are absolutely correct, but I would like to still use Windows for my machine as I play a lot of games in my spare time.
-I did buy a Steam Deck and I have been using it for a while now, seeing how well that works I am fairly certain we are moving in the right direction.
-But for most MMO's and big FPS games like Apex or Call of Duty, that still have Anti-Cheat I would rather not have a chance to get banned.
+You're absolutely correct, but I would like to still use Windows for my machine as I play a lot of games in my spare time.
+I did buy a Steam Deck and I have been using it for a while now, seeing how well that works, I am fairly certain we are moving in the right direction.
+But for most MMO's and big FPS games like Apex Legends or Call of Duty, that still have Anti-Cheat, I would rather not have a chance to get banned.
 
 <FlexCenter>
   <Button href="https://atsro.build/" icon="mdi:link-variant">
     Winget.run
   </Button>
   <Button
-    href="https://github.com/marticliment/WingetUI"
+    href="https://github.com/marticliment/UniGetUI"
     icon="mdi:link-variant"
   >
-    Winget UI
+    UniGetUI
   </Button>
   <Button
     href="https://gist.github.com/nlxdodge/ff8c3cbfab2c02c338f8c98e3a0cfdfe"
