--- a/src/content/posts/2023-08-29_the_wonderfull_world_of_windows_package_managers.mdx
+++ b/src/content/posts/2023-08-29_the_wonderfull_world_of_windows_package_managers.mdx
@@ -25,15 +25,16 @@ import UniGetUI from "../../assets/images/posts/unigetui.png";
 Every time when I do a Windows installation (because my current one is broken or I want to have a clean slate again) I need to install a bunch of programs again.
 Normally this would take a really long time and I sometimes forget what software I have used in the past, because some software I almost never use and just forget.
 
-We already have some packagemanagers that are getting more mature, think of WinGet from MicroSoft, Chocolatey or even Scoop.
+We already have some package managers that are getting more mature, think of WinGet from MicroSoft, Chocolatey or even Scoop.
 I stared of by using WinGet as this was made by MicroSoft. I also started using it on Windows 10 before it was installed by default for other people. 
 With Windows 11 you get WinGet straight out of the box.
 
-WinGet works mostly great, sometimes the sources get corrupted but overal I had a great experience. Also adding some software to the WinGet repository on GitHub was very easy and I contributed to some automated actions for software that I regularly use.
+WinGet works mostly great, sometimes the sources get corrupted but overall I had a great experience. 
+Also, adding some software to the WinGet repository on GitHub was very easy and I contributed to some automated actions for software that I regularly use.
 
 ### WinGet.run
 
-<Image src={WingetDotRun} alt="The website winget.run" format="avif" />
+<Image src={WingetDotRun} alt="The website WinGet.run" format="avif" />
 
 Avid WinGet users might have already seen this page before (hopefully). But if not, let me introduce you to [WinGet.run](https://winget.run).
 This website is basically a website(GUI) to search packages on WinGet. But that is not all, there are a plethora of tools available to use for WinGet.
@@ -42,32 +43,32 @@ Not everyone is a fan of CLI tools, in the beginning I also wasn't really a fan.
 ## Chocolatey
 
 Chocoletey I got exposed to during work, it works kind of the same as Winget, but has more packages and more features.
-Notably WinGet cannot install zipped executables or latests versions. They always need a static version to be available somewhere. 
+Notably WinGet cannot install zipped executable's or latest versions. They always need a static version to be available somewhere. 
 Chocolatey has an answer for this, as we have custom installation scripts. Which need to be made, but make it better for more software to be included.
-WinGet is working on solutions for this, but we are not there yet unfortunatly.
+WinGet is working on solutions for this, but we are not there yet unfortunately.
 
 ## Scoop
 
 Scoop is the last one that is a bit different, you first need to get buckets where you want to scoop from.
 You can compare it to the Ubuntu family `apt` package manager adding another source to download from.
 
-I did install ZED the new VSCode compeditor with Scoop because it has nightly versions available for Windows. But this got me thinking.
+I did install ZED the new Visual Studio Code competitor with Scoop because it has nightly versions available for Windows. But this got me thinking.
 
-> "Is there not something else that can combine everything in a nice GUI for Windows/Crossplatform, for free?"
+> "Is there not something else that can combine everything in a nice GUI for Windows/Cross-platform, for free?"
 
 ## It already exists?
 
 I have used a couple of tools in the past the first one being ChocolateyGUI. This worked alright, but what if a package was not in the Chocolatey repository? 
 Then you are out of luck.
 
-I then started to search for other tools and have used WingetUI before. But after getting support for other packagemanagers, it has been renamed.
-That tool of cours is [UniGetUI](https://github.com/marticliment/UniGetUI). Not only does it function as a WinGet package manager GUI, 
+I then started to search for other tools and have used WingetUI before. But after getting support for other package managers, it has been renamed.
+That tool of course is [UniGetUI](https://github.com/marticliment/UniGetUI). Not only does it function as a WinGet package manager GUI, 
 but it's also as a GUI for Chocolatey, Scoop, PIP, NPM, PowerShell, .NET packages and more to come. 
 So you can search new software, update and manage all your software in the same GUI interface. 
 
 Here is a picture of the tool in action. On the Source column you can see where the package is actually being downloaded from, together with the version and the package ID.
 
-<Image src={UniGetUI} alt="The Winget UI Sofware Search" format="avif" />
+<Image src={UniGetUI} alt="The Winget UI Software Search" format="avif" />
 
 If you want to use UniGetUI yourself then you're in luck!
 Installing the UniGetUI tool is really simple with WinGet itself, by just using:
