feat: add chocolatey GUI image

--- a/src/content/posts/2023-08-29_the_wonderfull_world_of_windows_package_managers.mdx
+++ b/src/content/posts/2023-08-29_the_wonderfull_world_of_windows_package_managers.mdx
@@ -17,6 +17,7 @@ import { Image } from "astro:assets";
 
 import WingetDotRun from "../../assets/images/posts/winget-desktop.png";
 import UniGetUI from "../../assets/images/posts/unigetui.png";
+import ChocolateyGUI from "../../assets/images/posts/chocolatey-gui.png";
 
 ## Contents
 
@@ -46,6 +47,8 @@ Chocoletey I got exposed to during work, it works kind of the same as Winget, bu
 Notably WinGet cannot install zipped executable's or latest versions. They always need a static version to be available somewhere. 
 Chocolatey has an answer for this, as we have custom installation scripts. Which need to be made, but make it better for more software to be included.
 WinGet is working on solutions for this, but we are not there yet unfortunately.
+
+<Image src={ChocolateyGUI} alt="The Chocolatey GUI" format="avif" />
 
 ## Scoop
 
