feat: update contents of GO advent of code

--- a/src/content/posts/2024-12-01_advent_of_code.mdx
+++ b/src/content/posts/2024-12-01_advent_of_code.mdx
@@ -7,12 +7,16 @@ tags:
   - AOC
   - Go
 date: 2024-12-01
+updated: 2024-10-09
 ---
 
 import Button from "../../components/Button.astro";
 import FlexCenter from "../../components/FlexCenter.astro";
 
 ## Contents
+
+## Tryouts
+Installing was going to be a breeze. 
 
 ## Day 1
 
@@ -31,6 +35,8 @@ import FlexCenter from "../../components/FlexCenter.astro";
 ## Day 8
 
 ## Day 9
+
+...
 
 <FlexCenter>
   <Button href="https://github.com/nlxdodge/Advent-Of-Code" icon="mdi:github">
