--- a/src/content/posts/2023-08-22_learning_japanese.mdx
+++ b/src/content/posts/2023-08-22_learning_japanese.mdx
@@ -4,6 +4,7 @@ author: Gerben Veenhof
 description: As you might have seen, I have some Vue.js experience, and I am also good on the way on learning the composition API in Vue version 3.0.
 tags: [ Language, Japan, Learning ]
 date: 2023-02-23
+draft: true
 ---
 import Button from "../../components/Button.astro"
 import FlexCenter from "../../components/FlexCenter.astro"
