--- a/src/content/posts/2023-08-19_learning-maven-as-gradle-user.mdx
+++ b/src/content/posts/2023-08-19_learning-maven-as-gradle-user.mdx
@@ -3,7 +3,10 @@ title: Learning Maven as a Gradle Beginner 🛠️
 author: Gerben Veenhof
 description: When I started doing Java I had didn't really like the extra bulk and readability of XML, so for that reason only I choose to use Gradle for my first few projects that I created for my studies.
 But low and behold I now get thrown in the working society and found out that all the companies I have worked for so far all use Maven.
-tags: [ Gradle, Maven, Buildtools ]
+tags: 
+    - Gradle
+    - Maven
+    - Buildtools
 date: 2023-08-19
 draft: true
 ---
