--- a/src/content/posts/2023-08-22_learning_japanese.mdx
+++ b/src/content/posts/2023-08-22_learning_japanese.mdx
@@ -2,7 +2,10 @@
 title: Learning Japanse
 author: Gerben Veenhof
 description: As you might have seen, I have some Vue.js experience, and I am also good on the way on learning the composition API in Vue version 3.0.
-tags: [ Language, Japan, Learning ]
+tags: 
+    - Language
+    - Japan
+    - Learning
 date: 2023-02-23
 draft: true
 ---
