--- a/src/content/posts/2023-08-19_learning-maven-as-gradle-user.mdx
+++ b/src/content/posts/2023-08-19_learning-maven-as-gradle-user.mdx
@@ -10,12 +10,13 @@ date: 2023-08-19
 draft: true
 ---
 
-When I started doing Java I had didn't really like the extra bulk and readability of XML, so for that reason only I choose to use Gradle for my first few projects that I created for my studies.
+When I started doing Java I had didn't really like the extra bulk and readability of XML, 
+so for that reason only I choose to use Gradle for my first few projects that I created for my studies.
 But low and behold I now get thrown in the working society and found out that all the companies I have worked for so far all use Maven.
 
 "I had to switch..."
 
-So thus begun my quest to learn Maven again (after having used it a couple of times when we had to do projects together).
+So thus begun my quest to learn Maven again (after having used it a couple of times when we had to do projects together at my university).
 For example, the Discord bot that I wrote in Java has some dependencies that it needs, which in Gradle would be like this.
 
 ## Gradle configuration
@@ -55,7 +56,6 @@ test {
 ```
 
 Now when compairing this to the maven variant you would get something like this.
-(I tried my best to convert it to a maven variant of course).
 
 ## Maven configuration
 
