style: code formatting applied

--- a/src/content/posts/2023-08-22_learning_japanese.mdx
+++ b/src/content/posts/2023-08-22_learning_japanese.mdx
@@ -3,16 +3,17 @@ title: Learning Japanse
 author: Gerben Veenhof
 description: As you might have seen, I have some Vue.js experience, and I am also good on the way on learning the composition API in Vue version 3.0.
 tags:
-    - Language
-    - Japan
-    - Learning
+  - Language
+  - Japan
+  - Learning
 date: 2023-02-23
 draft: true
 ---
-import Button from "../../components/Button.astro"
-import FlexCenter from "../../components/FlexCenter.astro"
 
-Some of my friends already know that I secretly always want to go to Japan, but without speaking or actually having learned any words of the language apart from the generic Anime stuff, it's going to be quite the task. 
+import Button from "../../components/Button.astro";
+import FlexCenter from "../../components/FlexCenter.astro";
+
+Some of my friends already know that I secretly always want to go to Japan, but without speaking or actually having learned any words of the language apart from the generic Anime stuff, it's going to be quite the task.
 I do actually enjoy some anime now and then in public transport to kill some time, so I started learning Japanese on Duolingo to see how far I can get.
 
 It starts out with simple words like `mizu` meaning water and `gohan` being rice, but eventually you will get harder words like `kudasai` meaning please.
@@ -20,9 +21,11 @@ Currently I am at a 60 day streak 🔥, but I will continue learning till the da
 For exmaple `すし` being `su` and `shi` and more simple characters alike, but actually starting to hear and recognise the characters is harder to master.
 
 And the letters `ち` and `ら` look alike in DuoLingo, just as `は` and `ほ`, but they are in fact way different.
-For people outside Germanic languages this can be seen as the same as `i` and `j`. They look alike but are way different from what they mean and how the language works. 
+For people outside Germanic languages this can be seen as the same as `i` and `j`. They look alike but are way different from what they mean and how the language works.
 This can be hard for first time learners trying to get a grasp on all the characters in the alphabet.
 
 <FlexCenter>
-    <Button href="https://www.duolingo.com/" icon="arcticons:duolingo-alt">Duolingo</Button>
+  <Button href="https://www.duolingo.com/" icon="arcticons:duolingo-alt">
+    Duolingo
+  </Button>
 </FlexCenter>
