--- a/src/content/posts/2025-04-11_mac_software_i_cannot_life_without.mdx
+++ b/src/content/posts/2025-04-11_mac_software_i_cannot_life_without.mdx
@@ -1,5 +1,5 @@
 ---
-title: Mac Software I cannot life without 🍎
+title: Mac Applications I cannot work without anymore 🍎
 author: Gerben Veenhof
 description: I keep finding weird things that Apple/Mac just makes it harder to work on.
 tags:
@@ -21,4 +21,10 @@ But working with the software has some desires and quirks that made me itchy. So
 
 Quickly I found that other people on the internet are exactly in the same boat.
 
-- [Alt+tab](https://)
+- [Alt+tab](https://github.com/lwouis/alt-tab-macos)
+  - This make the Alt Tabbing the same as on Windows, there is no option to make it flip between all open windows including the same application that is open. 
+    An example being Intelij. Lets say you have 5 windows open in Mac. You need to use <kbd>\`</kbd> + <kbd>Command</kbd> in order to switch between open windows of the same kind.
+    That means that if you use <kbd>Alt</kbd> + <kbd>Tab</kbd> you are never going to go to the same application but then another window. *Alt+Tab* fixes this issue.
+- [Rectangle](https://github.com/rxhanson/Rectangle)
+  - This makes the Window management work better with hotkeys and mouse dragging over multiple windows and more configuration. A must have for having multiple windows,
+    or a 
