feat: add additional content

--- a/src/content/posts/2025-04-11_mac_software_i_cannot_life_without.mdx
+++ b/src/content/posts/2025-04-11_mac_software_i_cannot_life_without.mdx
@@ -15,11 +15,10 @@ import FlexCenter from "../../components/FlexCenter.astro";
 It all started when my coworkers made scripts that only worked for Mac. After that I had to switch. Windows was not an option anymore.
 
 Looking back I say I like the hardware of the Mac way more then the Windows machines we used to get. Long battery life, good screen, good speakers, etc.
-Nothing to complain about. 
+Nothing to complain about, except the software/usage of the tilling manager (or lack there off when I started using my new Mac). 
 
-But working with the software has some desires and quirks that made me itchy. So I started looking for solutions for myself.
-
-Quickly I found that other people on the internet are exactly in the same boat.
+But working with the software has some desires and quirks that made me itchy. So I started looking for solutions on MacOS.
+Quickly I found that other people on the internet are exactly in the same boat, when they switched from Windows to MacOS.
 
 - [Alt+tab](https://github.com/lwouis/alt-tab-macos)
   - This make the Alt Tabbing the same as on Windows, there is no option to make it flip between all open windows including the same application that is open. 
@@ -27,4 +26,12 @@ Quickly I found that other people on the internet are exactly in the same boat.
     That means that if you use <kbd>Alt</kbd> + <kbd>Tab</kbd> you are never going to go to the same application but then another window. *Alt+Tab* fixes this issue.
 - [Rectangle](https://github.com/rxhanson/Rectangle)
   - This makes the Window management work better with hotkeys and mouse dragging over multiple windows and more configuration. A must have for having multiple windows,
-    or a 
+    or just a better replacement then what MacOS provides now a day. I am also not happy with the new option menu to close applications as well. Just to have it different? It worked good before...
+    Now I need to click twice to close an application and on a submenu to boot.
+- [LinearMouse](https://github.com/linearmouse/linearmouse)
+  - LinearMouse is a requirement, one of the things is that the scrolldirection is for the whole Mac, not per device or touchpad/external mouse. So when plugging in a new mouse the scrollwheel is inverted. Super annoying!
+    And it comes with some nice other perks as well, custom keybinds for scrolling horizontal that wasn't available before with the regular Mac software with an external mouse.
+- [Warp](https://warp.dev)
+  - This is a way better replacement then the default terminal included in MacOS, but to be fair I also tried out iTerm2, but I wasn't really a fan of it.
+    It just makes more sense, has autocomplete out of the box and more, yes others have it as well. 
+    But the keybindings and all other things can be changed in the settings and that's what makes me like Warp. But I am still open to other suggestions, as this is not open Source Software as far as I know.
