feat: update posts

--- a/src/content/posts/2025-08-01_php_to_rust.mdx
+++ b/src/content/posts/2025-08-01_php_to_rust.mdx
@@ -25,9 +25,9 @@ The plan is to run Rust in a small container and possibly even on my own Raspber
 But for longer periods it's better to just get a VM somewhere in a cloud to have some redundancy.
 
 So I need: 
-- A Docker/Kubernetes environment to run the Rust Application (or just a native VM).
-- An HTTP server to serve the Vue front-end Application.
-- An e-mail server to send e-mails for sign-up.
+- A Docker/Kubernetes environment to run the Rust Application (or just a native VM where I can manually install Rust on).
+- An HTTP server to serve the Vue front-end Application (Like Apache or NGINX or any Cloud that does the same).
+- An e-mail server to send e-mails for sign-up (or make some different way of users logging in, like a passkey).
 
 ## What frameworks to pick?
 
