--- a/src/content/posts/2025-12-01_advent_of_code_rust.mdx
+++ b/src/content/posts/2025-12-01_advent_of_code_rust.mdx
@@ -1,23 +1,19 @@
 ---
-title: Advent of Code 2024 (Go) 🎄
+title: Advent of Code 2025 (Rust) 🎄
 author: Gerben Veenhof
 draft: true
-description: "This time in advent of code: Go, the language from Google"
+description: "Lets get Rusty again"
 tags:
   - AOC
-  - Go
-date: 2024-12-01
-updated: 2024-10-09
+  - Rust
+date: 2025-12-01
+updated: 2025-12-01
 ---
 
 import Button from "../../components/Button.astro";
 import FlexCenter from "../../components/FlexCenter.astro";
 
 ## Contents
-
-## Tryouts
-
-Installing was going to be a breeze.
 
 ## Day 1
 
