feat: update AOC 2025 to Scala

--- a/src/content/posts/2025-12-01_advent_of_code_rust.mdx
+++ b/src/content/posts/2025-12-01_advent_of_code_rust.mdx
@@ -1,11 +1,11 @@
 ---
-title: Advent of Code 2025 (Rust) 🎄
+title: Advent of Code 2025 (Scala) 🎄
 author: Gerben Veenhof
 draft: true
-description: "Lets get Rusty again"
+description: "All the JVM"
 tags:
   - AOC
-  - Rust
+  - Scala
 date: 2025-12-01
 updated: 2025-12-01
 ---
@@ -32,6 +32,10 @@ import FlexCenter from "../../components/FlexCenter.astro";
 ## Day 8
 
 ## Day 9
+
+## Day 9
+
+## Day 12
 
 ...
 
